# quantumcoin

./: .coderabbit.yaml  .cursor-rules  .env.example  .eslintignore  .eslintrc.js  .gitignore  .gitlab-ci.yml  .gitmodules  .hope.swp  .mcp.json  .q-ctrl-skills.md  .qbraid-skills.md  .vercelignore  AGENTS.md  FUZZING_REPORT.md  README.md  SECURITY_AUDIT.md  SECURITY_STRATEGY.md  ageent.md  ai-workflow-docs.md  app.json  bitcoin_regtest.conf  btc_cli_guide.md  build_info.json  bundle_analysis.txt  bundle_analysis_strings.txt  cancel_jobs.py  cancel_quandela_jobs.py  check_jobs.py  dependabot_alert_summary.txt  dependabot_summary.json  deploy_local.sh  deploy_qbitcoin_sepolia.py  deploy_qbitcoin_solana.js  deploy_wallet.txt  derive_evm.js  docker-compose.quantum.yml  eslint.config.mjs  evm_server_account.txt  extract.py  (+72 more)
.antigravity/: rules
.github/: dependabot.yml
.maestro/: auth_login_flow.yaml  auth_signup_flow.yaml  (+2 more)
.vibe/: verify.sh  (+2 more)
gateway/: Cargo.toml
gateway/src/: auth.rs
gateway/src/routes/: qnrg.rs
k_agents/: Dockerfile  README.md  pyproject.toml  requirements.txt
k_agents/application/example_lab/: example.ipynb  example_app.py
k_agents/application/example_lab/example_lab/: experiments.py
k_agents/application/leeq/: leeq_app.py  simulated_setup_2.py
k_agents/k_agents/: io_interface.py  utils.py  variable_table.py
k_agents/k_agents/agent_group/: agent_group.py  code_wmemory.py  w_memory.py
k_agents/k_agents/app/: __init__.py  pages.py
k_agents/k_agents/execution/: __init__.py  agent.py  stage_execution.py  stage_generation.py  stage_transition.py
k_agents/k_agents/experiment/: experiment.py
k_agents/k_agents/inspection/: agents.py  decorator.py  vlms.py
k_agents/k_agents/translation/: agent.py  agent_longcontext.py  agent_rag.py  bm25_retrieval.py  code_translation.py  env.py  procedure_translation.py
rust_gateway/: Cargo.toml
rust_gateway/src/: main.rs
(+85951 files in other folders)
