[package]
name = "gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["ws", "macros"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "10.3.0"
reqwest = { version = "0.12", features = ["json"] }
rust_decimal = "1.36"
rust_decimal_macros = "1.36"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "tls-rustls", "rust_decimal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
redis = { version = "0.27", features = ["tokio-comp"] }
tonic = "0.12"
prost = "0.13"
dotenvy = "0.15"
futures-util = "0.3"

[build-dependencies]
tonic-build = "0.12"
