[package]
name = "rust_gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
chrono = { version = "0.4.44", features = ["serde"] }
jsonwebtoken = "10.4.0"
redis = { version = "0.24", features = ["aio", "tokio-comp"] }
reqwest = { version = "0.13.4", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
uuid = { version = "1.23.1", features = ["v4", "serde"] }
